Add `currency` to response JSON